[gd_scene load_steps=9 format=1]

[ext_resource path="res://src/levels/minigames/yankandy/pin.gd" type="Script" id=1]
[ext_resource path="res://src/audio/sfx/sfx.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/levels/minigames/yankandy/pin.png" type="Texture" id=3]
[ext_resource path="res://src/fonts/newsgeek16.fnt" type="BitmapFont" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 2.60303, 1.93835 )

[sub_resource type="OccluderPolygon2D" id=2]

closed = true
cull_mode = 0
polygon = Vector2Array( -10.084, -24.5488, -15.0622, -18.7927, -14.7603, -11.3257, -5.89267, -11.3257, -6.03912, -20.3484 )

[sub_resource type="Animation" id=3]

length = 1.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pin_score_flag:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.6, 1.2 ), "transitions":FloatArray( 0.25, 0.25, 0.25 ), "update":0, "values":[ 0.0, 1.0, 0.0 ] }
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"anim_popup_score" } ] }
tracks/2/type = "value"
tracks/2/path = NodePath("pin_score_flag:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ true ] }
tracks/3/type = "value"
tracks/3/path = NodePath("pin_score_flag:transform/scale")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0, 1, 1.2 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 3, 3 ), Vector2( 8, 8 ), Vector2( 2, 2 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("pin_score_flag/pin_score_text/pin_score_bg:color")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Color( 0.172264, 0.335938, 0.132538, 1 ) ] }

[sub_resource type="Animation" id=4]

length = 1.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pin_score_flag:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.6, 1.2 ), "transitions":FloatArray( 0.25, 0.25, 0.25 ), "update":0, "values":[ 0.0, 1.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("pin_score_flag:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ true ] }
tracks/2/type = "value"
tracks/2/path = NodePath("pin_score_flag:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1, 1.2 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 3, 3 ), Vector2( 8, 8 ), Vector2( 2, 2 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("pin_score_flag/pin_score_text/pin_score_bg:color")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Color( 0.586597, 0.179535, 0.621094, 1 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("pin_score_flag/pin_score_text:text")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ "5000", "Bonus" ] }

[node name="pin" type="RigidBody2D"]

transform/pos = Vector2( 166.5, 273.5 )
transform/scale = Vector2( 0.328125, 0.328125 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.894568, 0.981129, -1.15461, 1.05275, -9, 2.10583 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 3
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 500
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
__meta__ = { "_edit_group_":true }
box_area = null

[node name="sfx" parent="." instance=ExtResource( 2 )]

[node name="pin" type="Sprite" parent="."]

transform/pos = Vector2( -9.18216, -23.6945 )
texture = ExtResource( 3 )
offset = Vector2( 0.914295, 24.5305 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="pin"]

transform/pos = Vector2( 9.18216, 23.6945 )
z/z = 2
occluder = SubResource( 2 )
light_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -9, 2.10583 )
transform/rot = -47.6423
transform/scale = Vector2( 1.32773, 1.5625 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="score_animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/pin_score_anim = SubResource( 3 )
anims/secret_pin_animation = SubResource( 4 )
next/secret_pin_animation = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="pin_score_flag" type="Area2D" parent="."]

visibility/opacity = 0.0
visibility/self_opacity = 0.0
transform/pos = Vector2( 45.7143, 0 )
transform/scale = Vector2( 2, 2 )
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="pin_score_text" type="Label" parent="pin_score_flag"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -3.0
margin/right = 40.0
margin/bottom = 10.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Bonus"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pin_score_bg" type="Polygon2D" parent="pin_score_flag/pin_score_text"]

transform/pos = Vector2( -3.04762, 12.1905 )
z/z = -1
polygon = Vector2Array( -1.52374, 1.52368, 47.2382, 1.52368, 47.2382, -13.7144, -1.52374, -13.7144 )
uv = Vector2Array(  )
color = Color( 0.172264, 0.335938, 0.132538, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[connection signal="body_enter" from="." to="." method="_on_pin_body_enter"]


